--- a/src/app/appointment-list/appointment-list.component.html
+++ b/src/app/appointment-list/appointment-list.component.html
@@ -1,3 +1,8 @@
-<p>{{appointment.id}}</p>
-<p>{{appointment.title}}</p>
-<p>{{appointment.date}}</p>
+<div>
+    <input [(ngModel)]="newAppointmentTitle" type="text" placeholder="Appointment description">
+    <input [(ngModel)]="newAppointmentDate" type="date" placeholder="Appointment date">
+    <button (click)="addAppointment()">Add</button>
+</div>
+<div>
+    
+</div>
