Format the date format for display

--- a/src/app/appointment-list/appointment-list.component.html
+++ b/src/app/appointment-list/appointment-list.component.html
@@ -5,6 +5,6 @@
 </div>
 <ul>
     <li *ngFor="let appointment of appointments">
-        {{appointment.id}} |  {{appointment.title}} | {{appointment.date}}
+        {{appointment.id}} |  {{appointment.title}} | {{appointment.date | date:'dd.MM.yyy'}}
     </li>
 </ul>
